--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,18 @@
                     name: 'zf',
                     age: 12,
                     address: '霍营',
-                    n:{n:1}
+                    arr:[{a:2}]
                 }
-            }
+            },
+            // temolate
+            // render
         });
-        console.log(vm._data);
+        console.log(vm.arr); // 代理
+        
          // 可以通过实例的$options 来获取创造实例上传递的参数
+
+
+    
     </script>
 
 </body>
