--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <script src="../dist/vue.js"></script>
-    <div id="app">{{name}}</div>
+    <div id="app">
+        {{name}} <span>hello world  <i>12312</i></span></div>
     <script>
         // Vue 是MVVM框架 （基于mvc升级的 弱化controller这一层） vue没有完全遵循mvvm， 因为传统的mvvm框架 不能手动的操作数据  （ref 可以操作组件数据）
         // vue的核心 响应式数据原理 
@@ -33,11 +34,7 @@
         console.log(vm.arr); // 代理
         
          // 可以通过实例的$options 来获取创造实例上传递的参数
-
-
-    
     </script>
-
 </body>
 
 </html>
